src/scss/templates/_section.scss
.section {
    &-title {
        &__heading {
            text-transform: uppercase;
            font-size: 1.428rem;
            font-family: "YesevaOne";
            text-align: center;
            margin-bottom: 0.714rem;
            line-height: 1.37;
            &_primary {
                color: $primary;
            }
            &_white {
                color: $white;
            }
        }
        &__word {
            display: flex;
            align-items: center;
            &::after {
                content: "";
                width: 91px;
                height: 2px;
                background-color: $primary;
                margin-left: 2rem;
            }
        }
        &__image {
            display: flex;
            align-items: center;
            justify-content: center;
            &::before, &::after {
                content: "";
                width: 32px;
                height: 2px;
                background-color: $primary;
            }
            img {
                margin: 0 8px;
            }
        }
        &__text {
            max-width: 31.571rem;
            color: $white;
            font-family: 'FuturaBookC';
            font-size: 1.285rem;
            line-height: 1.61;
        }
        &__subtitle {
            font-size: 1.074rem;
            color: $white;
            margin-bottom: 1.285rem;
        }
        &_left {
            text-align-last: left;
        }
    }
    &__description {
        font-family: "FuturaBook";
        font-size: 1.428rem;
        color: $gray;
        text-align: center;
        line-height: 1.358;
    }
    &_dark {
        background: url("../../img/bg-lines-lg.svg") $dark no-repeat center / cover;
    }
}
@media screen and (max-width: 760px){
    .section {
        &-title {
            &__heading {
                margin-bottom: 1.833rem;
            }
            &__text {
                font-size: 1.166rem;
                margin-bottom: 2.571rem;
            }
        }
        &_dark {
            color: $light-black;
        }
    }
}

